@@ -1,2 +1,19 @@
 # game
 A basic foundation for a game, developed for fun and learning
+
+Coded full in Java, using JavaFX for visualization.
+
+## Setup in Intellij Idea:
+0. Download JavaFX
+1. Download the project + open it in Intellij
+2. In the project structure, add JavaFx/lib as a library
+3. In the Run Configuration's VM-option, add the following:
+      >--module-path /path/to/java-fx/lib --add-modules=javafx.controls,javafx.fxml,javafx.graphics,javafx.media,javafx.swing,javafx.web,javafx.base
+4. Run the project
+
+
+## Controls:
+W,A,S,D: Movement
+F: Toggle Fullscreen
+Esc: Open Menu
+Arrow Button: Fire
